Added config for fats percentage, proteins and fats values